crates/ty_python_semantic/resources/mdtest/snapshots/paramspec.md_-_Legacy_`ParamSpec`_-_Validating_`ParamSpe…_(648be2a43987ffd8).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: paramspec.md - Legacy `ParamSpec` - Validating `ParamSpec` usage
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/legacy/paramspec.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Any, Final, ParamSpec, Callable, Concatenate, Protocol, Generic
 2 | 
 3 | P = ParamSpec("P")
 4 | 
 5 | class ValidProtocol(Protocol[P]):
 6 |     def method(self, c: Callable[P, int]) -> None: ...
 7 | 
 8 | class ValidGeneric(Generic[P]):
 9 |     def method(self, c: Callable[P, int]) -> None: ...
10 | 
11 | def valid(
12 |     a1: Callable[P, int],
13 |     a2: Callable[Concatenate[int, P], int],
14 |     a3: Callable["P", int],
15 |     a4: Callable[Concatenate[int, "P"], int],
16 | ) -> None: ...
17 | def invalid(
18 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
19 |     a1: P,
20 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
21 |     a2: list[P],
22 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
23 |     a3: Callable[[P], int],
24 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
25 |     a4: Callable[..., P],
26 |     # TODO: error
27 |     a5: Callable[Concatenate[P, ...], int],
28 | ) -> None: ...
29 | 
30 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
31 | def invalid_return() -> P:
32 |     raise NotImplementedError
33 | 
34 | def invalid_variable_annotation(y: Any) -> None:
35 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
36 |     x: P = y
37 | 
38 | def invalid_with_qualifier(y: Any) -> None:
39 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
40 |     x: Final[P] = y
41 | 
42 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
43 | def invalid_stringified_return() -> "P":
44 |     raise NotImplementedError
45 | 
46 | def invalid_stringified_annotation(
47 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
48 |     a: "P",
49 | ) -> None: ...
50 | def invalid_stringified_variable_annotation(y: Any) -> None:
51 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
52 |     x: "P" = y
```

# Diagnostics

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:19:9
   |
17 | def invalid(
18 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
19 |     a1: P,
   |         ^
20 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
21 |     a2: list[P],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:21:14
   |
19 |     a1: P,
20 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
21 |     a2: list[P],
   |              ^
22 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
23 |     a3: Callable[[P], int],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:23:19
   |
21 |     a2: list[P],
22 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
23 |     a3: Callable[[P], int],
   |                   ^
24 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
25 |     a4: Callable[..., P],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:25:23
   |
23 |     a3: Callable[[P], int],
24 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
25 |     a4: Callable[..., P],
   |                       ^
26 |     # TODO: error
27 |     a5: Callable[Concatenate[P, ...], int],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:31:25
   |
30 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
31 | def invalid_return() -> P:
   |                         ^
32 |     raise NotImplementedError
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:36:8
   |
34 | def invalid_variable_annotation(y: Any) -> None:
35 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
36 |     x: P = y
   |        ^
37 |
38 | def invalid_with_qualifier(y: Any) -> None:
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:40:8
   |
38 | def invalid_with_qualifier(y: Any) -> None:
39 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
40 |     x: Final[P] = y
   |        ^^^^^^^^
41 |
42 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:43:37
   |
42 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
43 | def invalid_stringified_return() -> "P":
   |                                     ^^^
44 |     raise NotImplementedError
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:48:8
   |
46 | def invalid_stringified_annotation(
47 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
48 |     a: "P",
   |        ^^^
49 | ) -> None: ...
50 | def invalid_stringified_variable_annotation(y: Any) -> None:
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:52:8
   |
50 | def invalid_stringified_variable_annotation(y: Any) -> None:
51 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
52 |     x: "P" = y
   |        ^^^
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```
